# IoT-2018

./: .gitignore  README.md
cpp_server/: CMakeLists.txt  compile.sh  install_opencv.sh
cpp_server/includes/: FaceDetector.hpp
cpp_server/sources/: CMakeLists.txt  FaceDetector.cpp  main.cpp
esp8266/Doom-Portal/: Doom-Portal.ino
mobile_app/: build.gradle  google-services.json
mobile_app/app/: build.gradle
mobile_app/app/src/androidTest/java/iot/doom/com/doomPortal/: ExampleInstrumentedTest.kt
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/iot/doom/com/doomPortal/: AddPhotoFragment.kt  CustomTypefaceSpan.kt  DoomApi.kt  DoomPhoto.kt  DoomRequest.kt  MainActivity.kt  MainActivityFragment.kt  MyFirebaseMessagingService.kt  PairingFragment.kt  PhotoDetailActivity.kt  PhotoDetailFragment.kt  PhotoListFragment.kt  (+1 more)
mobile_app/app/src/main/res/anim/: bounce.xml
mobile_app/app/src/main/res/drawable/: pairing_shape.xml
mobile_app/app/src/main/res/layout/: activity_main.xml  activity_photo_detail.xml  foldable_backdrop.xml  fragment_add_photo.xml  fragment_auth.xml  fragment_main.xml  fragment_photo.xml  fragment_photo_detail.xml  fragment_photo_list.xml  main_backdrop.xml
mobile_app/app/src/main/res/menu/: menu_main.xml
mobile_app/app/src/main/res/navigation/: nav_main.xml
mobile_app/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
mosquitto/: doom-mosquitto.conf  mosquitto_launch_serv.sh  mosquitto_set_passwd.sh  passwd
python_server/: IoT.postman_collection.json  detectFace.py  go.c.py
(+2 files in other folders)
